# ActionDetectionforSignLanguage

./: .gitignore  0.npy  Action Detection Refined.ipynb  Action Detection Tutorial.ipynb  Action Detection.ipynb  ML_FPGA_Sign_Language_LSTM.ipynb  README.md  mcbc.md  pyproject.toml
.ipynb_checkpoints/: Action Detection Refined-checkpoint.ipynb  Action Detection Tutorial-checkpoint.ipynb
MP_Data/hello/30/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_Data/hello/31/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_Data/hello/32/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_Data/hello/33/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
MP_Data/hello/34/: 0.npy  1.npy  10.npy  11.npy  2.npy  (+25 more)
notebooks/: Action Detection Refined.ipynb  Action Detection Tutorial.ipynb
src/adfsl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2550 files in other folders)
